// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation Form - Renders Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create League"
  />
   
  <div>
    <h1
      class="mb-2 text-3xl font-normal text-main font-heading"
    >
      
      Create League
    
    </h1>
     
    <!---->
     
    <form>
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Name:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Year:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Description:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Website: (URL)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="url"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Coordinator:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <dropdown-input-stub
        label="Scoring Method:"
        list="Position Based (100 Max),Position Based (99 Max),Position Based (50 Max),Position Based (100 Max, Double Points),Position Based (50 Max, Double Points),Position Based (99 Max, Reduced in a Draw),Relative to Average Time (1000 Average),Relative to Average Time (100 Average),From Upload File"
        shift="true"
        value=""
      />
       
      <div
        class="relative appearance-none text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Number of Events to Count:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none appearance-none border-main rounded-shape text-body"
          max="100"
          min="1"
          type="number"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Courses: (Comma Separated)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="mt-3 checkbox-input mb-5 text-left"
      >
        <label
          class="select-none text-md font-heading text-main"
        >
          
    Dynamic Event Results:
    
          <input
            class="hidden"
            type="checkbox"
          />
           
          <span />
        </label>
      </div>
       
      <button
        class="button-lg"
      >
        Create League
      </button>
       
      <!---->
    </form>
  </div>
   
  <!---->
</div>
`;

exports[`Update Form - Renders Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit League"
  />
   
  <div>
    <!---->
     
    <h1
      class="mb-2 text-3xl font-normal text-main font-heading"
    >
      
      Edit League
    
    </h1>
     
    <form>
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Name:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Year:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Description:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Website: (URL)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="url"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Coordinator:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <dropdown-input-stub
        label="Scoring Method:"
        list="Position Based (100 Max),Position Based (99 Max),Position Based (50 Max),Position Based (100 Max, Double Points),Position Based (50 Max, Double Points),Position Based (99 Max, Reduced in a Draw),Relative to Average Time (1000 Average),Relative to Average Time (100 Average),From Upload File"
        shift="true"
        value=""
      />
       
      <div
        class="relative appearance-none text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Number of Events to Count:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none appearance-none border-main rounded-shape text-body"
          max="100"
          min="1"
          type="number"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Courses: (Comma Separated)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="mt-3 checkbox-input mb-5 text-left"
      >
        <label
          class="select-none text-md font-heading text-main"
        >
          
    Dynamic Event Results:
    
          <input
            class="hidden"
            type="checkbox"
          />
           
          <span />
        </label>
      </div>
       
      <!---->
       
      <button
        class="button-lg"
      >
        Update League
      </button>
    </form>
  </div>
   
  <!---->
</div>
`;
